--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,7 @@ dependencies:
   shared_preferences: ^2.2.2
   flutter_switch: ^0.3.2
   intl: ^0.17.0
-  timelines: ^0.1.0
+  timeline_tile: ^2.0.0
 
 dev_dependencies:
   flutter_test:
